--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ $(document).ready(function () {
 
 
 <p>The goal of this website is to (a) indulge my personal affinity for visualizing data and (b) learn a couple of new tools: Git, and RMarkdown websites. And (c) geek out on birds.</p>
+<p><img src="index_files/figure-html/display.map-1.png" width="672" /></p>
 <p><img src="index_files/figure-html/plotseq-1.png" width="960" /></p>
 <table>
 <caption>Most recent addition to the World list at each taxonomic level</caption>
