first update in COL

--- a/index.html
+++ b/index.html
@@ -227,30 +227,30 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Toxostoma redivivum</td>
-<td align="left">California Thrasher</td>
-<td align="left">2018-02-18</td>
-<td align="left">Alameda</td>
-<td align="left">CA</td>
-<td align="left">USA</td>
+<td align="left">Forpus conspicillatus</td>
+<td align="left">Spectacled Parrotlet</td>
+<td align="left">2018-03-22</td>
+<td align="left"></td>
+<td align="left">AN</td>
+<td align="left">COL</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Toxostoma</td>
-<td align="left">California Thrasher</td>
-<td align="left">2018-02-18</td>
-<td align="left">Alameda</td>
-<td align="left">CA</td>
-<td align="left">USA</td>
+<td align="left">Hypopyrrhus</td>
+<td align="left">Red-bellied Grackle</td>
+<td align="left">2018-03-19</td>
+<td align="left"></td>
+<td align="left">AN</td>
+<td align="left">COL</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Diomedeidae (Albatrosses)</td>
-<td align="left">Black-footed Albatross</td>
-<td align="left">2017-09-10</td>
-<td align="left">Monterey</td>
-<td align="left">CA</td>
-<td align="left">USA</td>
+<td align="left">Momotidae (Motmots)</td>
+<td align="left">Andean Motmot</td>
+<td align="left">2018-03-19</td>
+<td align="left"></td>
+<td align="left">AN</td>
+<td align="left">COL</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
