--- a/plotspage_California.html
+++ b/plotspage_California.html
@@ -223,19 +223,19 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Larus canus</td>
-<td align="left">Mew Gull</td>
-<td align="left">2018-03-01</td>
-<td align="left">Alameda</td>
+<td align="left">Geothlypis trichas</td>
+<td align="left">Common Yellowthroat</td>
+<td align="left">2018-03-11</td>
+<td align="left">Marin</td>
 <td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Toxostoma</td>
-<td align="left">California Thrasher</td>
-<td align="left">2018-02-18</td>
-<td align="left">Alameda</td>
+<td align="left">Geothlypis</td>
+<td align="left">Common Yellowthroat</td>
+<td align="left">2018-03-11</td>
+<td align="left">Marin</td>
 <td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
