--- a/aaLoadFirst.html
+++ b/aaLoadFirst.html
@@ -284,7 +284,7 @@ source(&quot;readin_data.R&quot;)</code></pre>
 <pre><code>## See spec(...) for full column specifications.</code></pre>
 <pre><code>## Warning in rbind(names(probs), probs_f): number of columns of result is not
 ## a multiple of vector length (arg 1)</code></pre>
-<pre><code>## Warning: 3104 parsing failures.
+<pre><code>## Warning: 3172 parsing failures.
 ## row # A tibble: 5 x 5 col     row col   expected   actual     file              expected   &lt;int&gt; &lt;chr&gt; &lt;chr&gt;      &lt;chr&gt;      &lt;chr&gt;             actual 1     1 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; file 2     2 &lt;NA&gt;  21 columns 20 columns &#39;MyEBirdData.csv&#39; row 3     3 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; col 4     4 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; expected 5     5 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39;
 ## ... ................. ... ..................................................... ........ ..................................................... ...... ..................................................... .... ..................................................... ... ..................................................... ... ..................................................... ........ .....................................................
 ## See problems(...) for more details.</code></pre>
@@ -304,6 +304,8 @@ g&lt;- ggplot()+theme_set(theme_gray()) + geom_step(data=myeb,aes(date,seq_along
 ## functions I need across pages
 source(&quot;function_areaList_areaVis.R&quot;)
 source(&quot;function_orders_plots.R&quot;)
+source(&quot;function_listMap.R&quot;)
+source(&quot;function_countsBars.R&quot;)
 
 
 ## knitr options I want set as default for all (&#39;global&#39;) code chunks
