--- a/plotspage_World.html
+++ b/plotspage_World.html
@@ -223,18 +223,18 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Forpus conspicillatus</td>
-<td align="left">Spectacled Parrotlet</td>
-<td align="left">2018-03-22</td>
+<td align="left">Vanellus chilensis</td>
+<td align="left">Southern Lapwing</td>
+<td align="left">2018-03-25</td>
 <td align="left"></td>
 <td align="left">AN</td>
 <td align="left">COL</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Hypopyrrhus</td>
-<td align="left">Red-bellied Grackle</td>
-<td align="left">2018-03-19</td>
+<td align="left">Tiaris</td>
+<td align="left">Yellow-faced Grassquit</td>
+<td align="left">2018-03-25</td>
 <td align="left"></td>
 <td align="left">AN</td>
 <td align="left">COL</td>
