Updating post FLA

--- a/aaLoadFirst.html
+++ b/aaLoadFirst.html
@@ -262,8 +262,10 @@ source(&quot;readin_data.R&quot;)</code></pre>
 ##   `iso_3166-2` = col_character(),
 ##   region = col_character(),
 ##   `sub-region` = col_character(),
+##   `intermediate-region` = col_character(),
 ##   `region-code` = col_character(),
-##   `sub-region-code` = col_character()
+##   `sub-region-code` = col_character(),
+##   `intermediate-region-code` = col_character()
 ## )</code></pre>
 <pre><code>## Parsed with column specification:
 ## cols(
@@ -284,7 +286,7 @@ source(&quot;readin_data.R&quot;)</code></pre>
 <pre><code>## See spec(...) for full column specifications.</code></pre>
 <pre><code>## Warning in rbind(names(probs), probs_f): number of columns of result is not
 ## a multiple of vector length (arg 1)</code></pre>
-<pre><code>## Warning: 3172 parsing failures.
+<pre><code>## Warning: 3520 parsing failures.
 ## row # A tibble: 5 x 5 col     row col   expected   actual     file              expected   &lt;int&gt; &lt;chr&gt; &lt;chr&gt;      &lt;chr&gt;      &lt;chr&gt;             actual 1     1 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; file 2     2 &lt;NA&gt;  21 columns 20 columns &#39;MyEBirdData.csv&#39; row 3     3 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; col 4     4 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; expected 5     5 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39;
 ## ... ................. ... ..................................................... ........ ..................................................... ...... ..................................................... .... ..................................................... ... ..................................................... ... ..................................................... ........ .....................................................
 ## See problems(...) for more details.</code></pre>
