--- a/plotspage_ABA.html
+++ b/plotspage_ABA.html
@@ -223,29 +223,29 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Toxostoma redivivum</td>
-<td align="left">California Thrasher</td>
-<td align="left">2018-02-18</td>
-<td align="left">Alameda</td>
-<td align="left">CA</td>
+<td align="left">Thalasseus sandvicensis</td>
+<td align="left">Sandwich Tern</td>
+<td align="left">2018-04-29</td>
+<td align="left">Lee</td>
+<td align="left">FL</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Toxostoma</td>
-<td align="left">California Thrasher</td>
-<td align="left">2018-02-18</td>
-<td align="left">Alameda</td>
-<td align="left">CA</td>
+<td align="left">Dolichonyx</td>
+<td align="left">Bobolink</td>
+<td align="left">2018-04-27</td>
+<td align="left">Sarasota</td>
+<td align="left">FL</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Motacillidae (Wagtails and Pipits)</td>
-<td align="left">American Pipit</td>
-<td align="left">2017-12-03</td>
-<td align="left">Sacramento</td>
-<td align="left">CA</td>
+<td align="left">Aramidae (Limpkin)</td>
+<td align="left">Limpkin</td>
+<td align="left">2018-04-27</td>
+<td align="left">Sarasota</td>
+<td align="left">FL</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
