--- a/plotspage_California.html
+++ b/plotspage_California.html
@@ -223,28 +223,28 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Geothlypis trichas</td>
-<td align="left">Common Yellowthroat</td>
-<td align="left">2018-03-11</td>
-<td align="left">Marin</td>
+<td align="left">Oreothlypis ruficapilla</td>
+<td align="left">Nashville Warbler</td>
+<td align="left">2018-04-22</td>
+<td align="left">Contra Costa</td>
 <td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Geothlypis</td>
-<td align="left">Common Yellowthroat</td>
-<td align="left">2018-03-11</td>
-<td align="left">Marin</td>
+<td align="left">Aeronautes</td>
+<td align="left">White-throated Swift</td>
+<td align="left">2018-04-22</td>
+<td align="left">Contra Costa</td>
 <td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Motacillidae (Wagtails and Pipits)</td>
-<td align="left">American Pipit</td>
-<td align="left">2017-12-03</td>
-<td align="left">Sacramento</td>
+<td align="left">Apodidae (Swifts)</td>
+<td align="left">White-throated Swift</td>
+<td align="left">2018-04-22</td>
+<td align="left">Contra Costa</td>
 <td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
