--- a/index.html
+++ b/index.html
@@ -227,21 +227,21 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Vanellus chilensis</td>
-<td align="left">Southern Lapwing</td>
-<td align="left">2018-03-25</td>
-<td align="left"></td>
-<td align="left">AN</td>
-<td align="left">COL</td>
+<td align="left">Egretta caerulea</td>
+<td align="left">Little Blue Heron</td>
+<td align="left">2018-04-29</td>
+<td align="left">Lee</td>
+<td align="left">FL</td>
+<td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Tiaris</td>
-<td align="left">Yellow-faced Grassquit</td>
-<td align="left">2018-03-25</td>
-<td align="left"></td>
-<td align="left">AN</td>
-<td align="left">COL</td>
+<td align="left">Dolichonyx</td>
+<td align="left">Bobolink</td>
+<td align="left">2018-04-27</td>
+<td align="left">Sarasota</td>
+<td align="left">FL</td>
+<td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
