--- a/bigdays.html
+++ b/bigdays.html
@@ -209,7 +209,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="bigdays_files/figure-html/bars-1.png" width="960" /></p>
+<p><img src="bigdays_files/figure-html/bars-1.png" width="960" /><img src="bigdays_files/figure-html/bars-2.png" width="960" /></p>
 
 
 
