--- a/plotspage_Vermont.html
+++ b/plotspage_Vermont.html
@@ -11,7 +11,7 @@
 
 
 
-<title>California</title>
+<title>Vermont</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -201,14 +201,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">California</h1>
+<h1 class="title toc-ignore">Vermont</h1>
 
 </div>
 
 
-<p><img src="plotspage_California_files/figure-html/plotseq-1.png" width="864" /></p>
+<p><img src="plotspage_Vermont_files/figure-html/plotseq-1.png" width="864" /></p>
 <table>
-<caption>Most recent addition to the California list at each taxonomic level</caption>
+<caption>Most recent addition to the Vermont list at each taxonomic level</caption>
 <thead>
 <tr class="header">
 <th align="left">Level</th>
@@ -223,43 +223,43 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Oreothlypis ruficapilla</td>
-<td align="left">Nashville Warbler</td>
-<td align="left">2018-04-22</td>
-<td align="left">Contra Costa</td>
-<td align="left">CA</td>
+<td align="left">Geothlypis trichas</td>
+<td align="left">Common Yellowthroat</td>
+<td align="left">2014-09-28</td>
+<td align="left">Chittenden</td>
+<td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Aeronautes</td>
-<td align="left">White-throated Swift</td>
-<td align="left">2018-04-22</td>
-<td align="left">Contra Costa</td>
-<td align="left">CA</td>
+<td align="left">Geothlypis</td>
+<td align="left">Common Yellowthroat</td>
+<td align="left">2014-09-28</td>
+<td align="left">Chittenden</td>
+<td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Apodidae (Swifts)</td>
-<td align="left">White-throated Swift</td>
-<td align="left">2018-04-22</td>
-<td align="left">Contra Costa</td>
-<td align="left">CA</td>
+<td align="left">Parulidae (New World Warblers)</td>
+<td align="left">Common Yellowthroat</td>
+<td align="left">2014-09-28</td>
+<td align="left">Chittenden</td>
+<td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
-<td align="left">Procellariiformes (Albatrosses and Petrels)</td>
-<td align="left">Sooty Shearwater</td>
-<td align="left">2017-09-10</td>
-<td align="left">Monterey</td>
-<td align="left">CA</td>
+<td align="left">Strigiformes (Owls)</td>
+<td align="left">Barred Owl</td>
+<td align="left">2014-09-28</td>
+<td align="left">Chittenden</td>
+<td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 </tbody>
 </table>
-<p><img src="plotspage_California_files/figure-html/plotseq-2.png" width="864" /></p>
+<p><img src="plotspage_Vermont_files/figure-html/plotseq-2.png" width="864" /></p>
 
 
 
