--- a/index.html
+++ b/index.html
@@ -227,39 +227,39 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Egretta caerulea</td>
-<td align="left">Little Blue Heron</td>
-<td align="left">2018-04-29</td>
-<td align="left">Lee</td>
-<td align="left">FL</td>
+<td align="left">Himatione sanguinea</td>
+<td align="left">Apapane</td>
+<td align="left">2018-05-18</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Dolichonyx</td>
-<td align="left">Bobolink</td>
-<td align="left">2018-04-27</td>
-<td align="left">Sarasota</td>
-<td align="left">FL</td>
+<td align="left">Himatione</td>
+<td align="left">Apapane</td>
+<td align="left">2018-05-18</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Momotidae (Motmots)</td>
-<td align="left">Andean Motmot</td>
-<td align="left">2018-03-19</td>
-<td align="left"></td>
-<td align="left">AN</td>
-<td align="left">COL</td>
+<td align="left">Monarchidae (Monarch Flycatchers)</td>
+<td align="left">Kauai Elepaio</td>
+<td align="left">2018-05-18</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
+<td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
-<td align="left">Phoenicopteriformes (Flamingos)</td>
-<td align="left">Chilean Flamingo</td>
-<td align="left">2013-06-08</td>
-<td align="left"></td>
-<td align="left">AN</td>
-<td align="left">PER</td>
+<td align="left">Phaethontiformes (Tropicbirds)</td>
+<td align="left">White-tailed Tropicbird</td>
+<td align="left">2018-05-14</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
+<td align="left">USA</td>
 </tr>
 </tbody>
 </table>
