--- a/plotspage_area_general.html
+++ b/plotspage_area_general.html
@@ -223,39 +223,39 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Thalasseus sandvicensis</td>
-<td align="left">Sandwich Tern</td>
-<td align="left">2018-04-29</td>
-<td align="left">Lee</td>
-<td align="left">FL</td>
+<td align="left">Himatione sanguinea</td>
+<td align="left">Apapane</td>
+<td align="left">2018-05-18</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Dolichonyx</td>
-<td align="left">Bobolink</td>
-<td align="left">2018-04-27</td>
-<td align="left">Sarasota</td>
-<td align="left">FL</td>
+<td align="left">Himatione</td>
+<td align="left">Apapane</td>
+<td align="left">2018-05-18</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Aramidae (Limpkin)</td>
-<td align="left">Limpkin</td>
-<td align="left">2018-04-27</td>
-<td align="left">Sarasota</td>
-<td align="left">FL</td>
+<td align="left">Leiothrichidae (Laughingthrushes and Allies)</td>
+<td align="left">Chinese Hwamei</td>
+<td align="left">2018-05-18</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
-<td align="left">Cathartiformes (New World Vultures)</td>
-<td align="left">Turkey Vulture</td>
-<td align="left">2015-06-30</td>
-<td align="left">Montréal</td>
-<td align="left">QC</td>
-<td align="left">CAN</td>
+<td align="left">Psittaciformes (Parrots)</td>
+<td align="left">Rose-ringed Parakeet</td>
+<td align="left">2018-05-16</td>
+<td align="left">Kauai</td>
+<td align="left">HI</td>
+<td align="left">USA</td>
 </tr>
 </tbody>
 </table>
