--- a/index.html
+++ b/index.html
@@ -227,20 +227,20 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Himatione sanguinea</td>
-<td align="left">Apapane</td>
-<td align="left">2018-05-18</td>
-<td align="left">Kauai</td>
-<td align="left">HI</td>
+<td align="left">Chondestes grammacus</td>
+<td align="left">Lark Sparrow</td>
+<td align="left">2018-07-22</td>
+<td align="left">Marin</td>
+<td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Himatione</td>
-<td align="left">Apapane</td>
-<td align="left">2018-05-18</td>
-<td align="left">Kauai</td>
-<td align="left">HI</td>
+<td align="left">Chondestes</td>
+<td align="left">Lark Sparrow</td>
+<td align="left">2018-07-22</td>
+<td align="left">Marin</td>
+<td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
