--- a/plotspage_California.html
+++ b/plotspage_California.html
@@ -223,19 +223,19 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Oreothlypis ruficapilla</td>
-<td align="left">Nashville Warbler</td>
-<td align="left">2018-04-22</td>
-<td align="left">Contra Costa</td>
+<td align="left">Chondestes grammacus</td>
+<td align="left">Lark Sparrow</td>
+<td align="left">2018-07-22</td>
+<td align="left">Marin</td>
 <td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Aeronautes</td>
-<td align="left">White-throated Swift</td>
-<td align="left">2018-04-22</td>
-<td align="left">Contra Costa</td>
+<td align="left">Chondestes</td>
+<td align="left">Lark Sparrow</td>
+<td align="left">2018-07-22</td>
+<td align="left">Marin</td>
 <td align="left">CA</td>
 <td align="left">USA</td>
 </tr>
