updating as of first day in Vermont

--- a/bigdays.html
+++ b/bigdays.html
@@ -182,13 +182,16 @@ $(document).ready(function () {
   <a href="plotspage_ABA.html">ABA area</a>
 </li>
 <li>
+  <a href="plotspage_Vermont.html">Vermont</a>
+</li>
+<li>
   <a href="plotspage_California.html">California</a>
 </li>
 <li>
   <a href="plotspage_Quebec.html">Quebec</a>
 </li>
 <li>
-  <a href="bigdays.html">Big days</a>
+  <a href="bigdays.html">By Day</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
