--- a/aaLoadFirst.html
+++ b/aaLoadFirst.html
@@ -181,13 +181,16 @@ $(document).ready(function () {
   <a href="plotspage_ABA.html">ABA area</a>
 </li>
 <li>
+  <a href="plotspage_Vermont.html">Vermont</a>
+</li>
+<li>
   <a href="plotspage_California.html">California</a>
 </li>
 <li>
   <a href="plotspage_Quebec.html">Quebec</a>
 </li>
 <li>
-  <a href="bigdays.html">Big days</a>
+  <a href="bigdays.html">By Day</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -286,7 +289,7 @@ source(&quot;readin_data.R&quot;)</code></pre>
 <pre><code>## See spec(...) for full column specifications.</code></pre>
 <pre><code>## Warning in rbind(names(probs), probs_f): number of columns of result is not
 ## a multiple of vector length (arg 1)</code></pre>
-<pre><code>## Warning: 3945 parsing failures.
+<pre><code>## Warning: 4114 parsing failures.
 ## row # A tibble: 5 x 5 col     row col   expected   actual     file              expected   &lt;int&gt; &lt;chr&gt; &lt;chr&gt;      &lt;chr&gt;      &lt;chr&gt;             actual 1     1 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; file 2     2 &lt;NA&gt;  21 columns 20 columns &#39;MyEBirdData.csv&#39; row 3     3 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; col 4     4 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; expected 5     5 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39;
 ## ... ................. ... ..................................................... ........ ..................................................... ...... ..................................................... .... ..................................................... ... ..................................................... ... ..................................................... ........ .....................................................
 ## See problems(...) for more details.</code></pre>
