--- a/plotspage_Vermont.html
+++ b/plotspage_Vermont.html
@@ -181,13 +181,16 @@ $(document).ready(function () {
   <a href="plotspage_ABA.html">ABA area</a>
 </li>
 <li>
+  <a href="plotspage_Vermont.html">Vermont</a>
+</li>
+<li>
   <a href="plotspage_California.html">California</a>
 </li>
 <li>
   <a href="plotspage_Quebec.html">Quebec</a>
 </li>
 <li>
-  <a href="bigdays.html">Big days</a>
+  <a href="bigdays.html">By Day</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -223,36 +226,36 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Geothlypis trichas</td>
-<td align="left">Common Yellowthroat</td>
-<td align="left">2014-09-28</td>
+<td align="left">Falco sparverius</td>
+<td align="left">American Kestrel</td>
+<td align="left">2018-08-07</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Geothlypis</td>
-<td align="left">Common Yellowthroat</td>
-<td align="left">2014-09-28</td>
+<td align="left">Falco</td>
+<td align="left">American Kestrel</td>
+<td align="left">2018-08-07</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Parulidae (New World Warblers)</td>
-<td align="left">Common Yellowthroat</td>
-<td align="left">2014-09-28</td>
+<td align="left">Falconidae (Falcons and Caracaras)</td>
+<td align="left">American Kestrel</td>
+<td align="left">2018-08-07</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
-<td align="left">Strigiformes (Owls)</td>
-<td align="left">Barred Owl</td>
-<td align="left">2014-09-28</td>
+<td align="left">Falconiformes (Falcons)</td>
+<td align="left">American Kestrel</td>
+<td align="left">2018-08-07</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
