--- a/plotspage_area_general.html
+++ b/plotspage_area_general.html
@@ -181,13 +181,16 @@ $(document).ready(function () {
   <a href="plotspage_ABA.html">ABA area</a>
 </li>
 <li>
+  <a href="plotspage_Vermont.html">Vermont</a>
+</li>
+<li>
   <a href="plotspage_California.html">California</a>
 </li>
 <li>
   <a href="plotspage_Quebec.html">Quebec</a>
 </li>
 <li>
-  <a href="bigdays.html">Big days</a>
+  <a href="bigdays.html">By Day</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -223,29 +226,29 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Chondestes grammacus</td>
-<td align="left">Lark Sparrow</td>
-<td align="left">2018-07-22</td>
-<td align="left">Marin</td>
-<td align="left">CA</td>
+<td align="left">Buteo platypterus</td>
+<td align="left">Broad-winged Hawk</td>
+<td align="left">2018-08-07</td>
+<td align="left">Chittenden</td>
+<td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Chondestes</td>
-<td align="left">Lark Sparrow</td>
-<td align="left">2018-07-22</td>
-<td align="left">Marin</td>
-<td align="left">CA</td>
+<td align="left">Spiza</td>
+<td align="left">Dickcissel</td>
+<td align="left">2018-08-05</td>
+<td align="left">Lancaster</td>
+<td align="left">NE</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Leiothrichidae (Laughingthrushes and Allies)</td>
-<td align="left">Chinese Hwamei</td>
-<td align="left">2018-05-18</td>
-<td align="left">Kauai</td>
-<td align="left">HI</td>
+<td align="left">Laniidae (Shrikes)</td>
+<td align="left">Loggerhead Shrike</td>
+<td align="left">2018-08-01</td>
+<td align="left">Pershing</td>
+<td align="left">NV</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
