--- a/plotspage_Vermont.html
+++ b/plotspage_Vermont.html
@@ -226,36 +226,36 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Falco sparverius</td>
-<td align="left">American Kestrel</td>
-<td align="left">2018-08-07</td>
+<td align="left">Poecile atricapillus</td>
+<td align="left">Black-capped Chickadee</td>
+<td align="left">2018-08-12</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Falco</td>
-<td align="left">American Kestrel</td>
-<td align="left">2018-08-07</td>
+<td align="left">Poecile</td>
+<td align="left">Black-capped Chickadee</td>
+<td align="left">2018-08-12</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Falconidae (Falcons and Caracaras)</td>
-<td align="left">American Kestrel</td>
-<td align="left">2018-08-07</td>
+<td align="left">Paridae (Tits, Chickadees, and Titmice)</td>
+<td align="left">Black-capped Chickadee</td>
+<td align="left">2018-08-12</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
-<td align="left">Falconiformes (Falcons)</td>
-<td align="left">American Kestrel</td>
-<td align="left">2018-08-07</td>
+<td align="left">Pelecaniformes (Pelicans, Herons, and allies)</td>
+<td align="left">Great Egret</td>
+<td align="left">2018-08-12</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
