--- a/plotspage_Vermont.html
+++ b/plotspage_Vermont.html
@@ -226,27 +226,27 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Poecile atricapillus</td>
-<td align="left">Black-capped Chickadee</td>
-<td align="left">2018-08-12</td>
+<td align="left">Dumetella carolinensis</td>
+<td align="left">Gray Catbird</td>
+<td align="left">2018-08-21</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Poecile</td>
-<td align="left">Black-capped Chickadee</td>
-<td align="left">2018-08-12</td>
+<td align="left">Dumetella</td>
+<td align="left">Gray Catbird</td>
+<td align="left">2018-08-21</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Paridae (Tits, Chickadees, and Titmice)</td>
-<td align="left">Black-capped Chickadee</td>
-<td align="left">2018-08-12</td>
+<td align="left">Mimidae (Mockingbirds and Thrashers)</td>
+<td align="left">Gray Catbird</td>
+<td align="left">2018-08-21</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
