--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -230,20 +233,20 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Buteo platypterus</td>
-<td align="left">Broad-winged Hawk</td>
-<td align="left">2018-08-07</td>
+<td align="left">Falco columbarius</td>
+<td align="left">Merlin</td>
+<td align="left">2018-09-09</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Spiza</td>
-<td align="left">Dickcissel</td>
-<td align="left">2018-08-05</td>
-<td align="left">Lancaster</td>
-<td align="left">NE</td>
+<td align="left">Chlidonias</td>
+<td align="left">Black Tern</td>
+<td align="left">2018-09-02</td>
+<td align="left">Barnstable</td>
+<td align="left">MA</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
@@ -266,6 +269,8 @@ $(document).ready(function () {
 </tr>
 </tbody>
 </table>
+<pre><code>## Coordinate system already present. Adding new coordinate system, which will replace the existing one.
+## Coordinate system already present. Adding new coordinate system, which will replace the existing one.</code></pre>
 <p><img src="index_files/figure-html/plotseq-2.png" width="864" /></p>
 
 
