--- a/plotspage_Quebec.html
+++ b/plotspage_Quebec.html
@@ -90,6 +90,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -262,6 +265,8 @@ $(document).ready(function () {
 </tr>
 </tbody>
 </table>
+<pre><code>## Coordinate system already present. Adding new coordinate system, which will replace the existing one.
+## Coordinate system already present. Adding new coordinate system, which will replace the existing one.</code></pre>
 <p><img src="plotspage_Quebec_files/figure-html/plotseq-2.png" width="864" /></p>
 
 
