--- a/plotspage_Vermont.html
+++ b/plotspage_Vermont.html
@@ -90,6 +90,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -226,42 +229,44 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Dumetella carolinensis</td>
-<td align="left">Gray Catbird</td>
-<td align="left">2018-08-21</td>
+<td align="left">Bonasa umbellus</td>
+<td align="left">Ruffed Grouse</td>
+<td align="left">2018-09-10</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Dumetella</td>
-<td align="left">Gray Catbird</td>
-<td align="left">2018-08-21</td>
+<td align="left">Bonasa</td>
+<td align="left">Ruffed Grouse</td>
+<td align="left">2018-09-10</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Mimidae (Mockingbirds and Thrashers)</td>
-<td align="left">Gray Catbird</td>
-<td align="left">2018-08-21</td>
+<td align="left">Phasianidae (Pheasants, Grouse, and Allies)</td>
+<td align="left">Ruffed Grouse</td>
+<td align="left">2018-09-10</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
-<td align="left">Pelecaniformes (Pelicans, Herons, and allies)</td>
-<td align="left">Great Egret</td>
-<td align="left">2018-08-12</td>
+<td align="left">Galliformes (Wildfowl)</td>
+<td align="left">Ruffed Grouse</td>
+<td align="left">2018-09-10</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 </tbody>
 </table>
+<pre><code>## Coordinate system already present. Adding new coordinate system, which will replace the existing one.
+## Coordinate system already present. Adding new coordinate system, which will replace the existing one.</code></pre>
 <p><img src="plotspage_Vermont_files/figure-html/plotseq-2.png" width="864" /></p>
 
 
