switching over to 2018 Clements file

--- a/aaLoadFirst.html
+++ b/aaLoadFirst.html
@@ -247,29 +247,30 @@ source(&quot;readin_data.R&quot;)</code></pre>
 ## )</code></pre>
 <pre><code>## Warning: Missing column names filled in: &#39;X12&#39; [12], &#39;X13&#39; [13],
 ## &#39;X14&#39; [14], &#39;X15&#39; [15], &#39;X16&#39; [16], &#39;X17&#39; [17], &#39;X18&#39; [18], &#39;X19&#39; [19],
-## &#39;X20&#39; [20], &#39;X21&#39; [21], &#39;X22&#39; [22]</code></pre>
+## &#39;X20&#39; [20], &#39;X21&#39; [21], &#39;X22&#39; [22], &#39;X23&#39; [23], &#39;X24&#39; [24], &#39;X25&#39; [25],
+## &#39;X26&#39; [26], &#39;X27&#39; [27], &#39;X28&#39; [28], &#39;X29&#39; [29], &#39;X30&#39; [30]</code></pre>
 <pre><code>## Parsed with column specification:
 ## cols(
 ##   .default = col_character(),
-##   `sort v2017` = col_double(),
+##   `sort v2018` = col_double(),
 ##   extinct = col_integer(),
 ##   `extinct year` = col_integer()
 ## )</code></pre>
 <pre><code>## See spec(...) for full column specifications.</code></pre>
 <pre><code>## Warning in rbind(names(probs), probs_f): number of columns of result is not
 ## a multiple of vector length (arg 1)</code></pre>
-<pre><code>## Warning: 34 parsing failures.
-## row # A tibble: 5 x 5 col     row col         expected  actual file                                  expected   &lt;int&gt; &lt;chr&gt;       &lt;chr&gt;     &lt;chr&gt;  &lt;chr&gt;                                 actual 1  3465 extinct ye… an integ… xxxx   &#39;eBird-Clements-integrated-checklist… file 2  3556 extinct ye… an integ… xxxx   &#39;eBird-Clements-integrated-checklist… row 3  3562 extinct ye… an integ… xxxx   &#39;eBird-Clements-integrated-checklist… col 4  3578 extinct ye… an integ… xxxx   &#39;eBird-Clements-integrated-checklist… expected 5  4895 extinct ye… an integ… xxxx   &#39;eBird-Clements-integrated-checklist…
+<pre><code>## Warning: 35 parsing failures.
+## row # A tibble: 5 x 5 col     row col        expected  actual file                                   expected   &lt;int&gt; &lt;chr&gt;      &lt;chr&gt;     &lt;chr&gt;  &lt;chr&gt;                                  actual 1  1818 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… file 2  2331 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… row 3  3016 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… col 4  4278 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… expected 5  5102 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec…
 ## ... ................. ... .......................................................................... ........ .......................................................................... ...... .......................................................................... .... .......................................................................... ... .......................................................................... ... .......................................................................... ........ ..........................................................................
 ## See problems(...) for more details.</code></pre>
 <pre><code>## Warning: package &#39;bindrcpp&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: Expected 4 pieces. Additional pieces discarded in 144 rows [246,
-## 276, 277, 279, 280, 281, 287, 288, 289, 291, 304, 305, 306, 307, 308, 309,
-## 310, 311, 314, 330, ...].</code></pre>
-<pre><code>## Warning: Expected 4 pieces. Missing pieces filled with `NA` in 32736
+<pre><code>## Warning: Expected 4 pieces. Additional pieces discarded in 150 rows [247,
+## 275, 276, 278, 279, 280, 286, 287, 288, 290, 303, 304, 305, 306, 307, 308,
+## 309, 310, 311, 314, ...].</code></pre>
+<pre><code>## Warning: Expected 4 pieces. Missing pieces filled with `NA` in 32814
 ## rows [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19,
 ## 21, ...].</code></pre>
-<pre><code>## Warning: Expected 2 pieces. Additional pieces discarded in 22868 rows [196,
+<pre><code>## Warning: Expected 2 pieces. Additional pieces discarded in 23040 rows [196,
 ## 197, 198, 199, 200, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221,
 ## 222, 223, 224, 225, ...].</code></pre>
 <pre><code>## Parsed with column specification:
