--- a/aaLoadFirst.html
+++ b/aaLoadFirst.html
@@ -221,18 +221,9 @@ suppressPackageStartupMessages({
   library(knitr)
   library(rmarkdown)
   library(tidyverse)
-})</code></pre>
-<pre><code>## Warning: package &#39;cowplot&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;sf&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;rgdal&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;sp&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;rmarkdown&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;tidyr&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;purrr&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;dplyr&#39; was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package &#39;stringr&#39; was built under R version 3.4.4</code></pre>
-<pre class="r"><code>## variables I need for my site 
+})
+
+## variables I need for my site 
 source(&quot;readin_data.R&quot;)</code></pre>
 <pre><code>## Warning: Missing column names filled in: &#39;X6&#39; [6], &#39;X7&#39; [7]</code></pre>
 <pre><code>## Parsed with column specification:
@@ -263,7 +254,6 @@ source(&quot;readin_data.R&quot;)</code></pre>
 ## row # A tibble: 5 x 5 col     row col        expected  actual file                                   expected   &lt;int&gt; &lt;chr&gt;      &lt;chr&gt;     &lt;chr&gt;  &lt;chr&gt;                                  actual 1  1818 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… file 2  2331 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… row 3  3016 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… col 4  4278 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec… expected 5  5102 extinct y… an integ… xxxx   &#39;eBird-Clements-v2018-integrated-chec…
 ## ... ................. ... .......................................................................... ........ .......................................................................... ...... .......................................................................... .... .......................................................................... ... .......................................................................... ... .......................................................................... ........ ..........................................................................
 ## See problems(...) for more details.</code></pre>
-<pre><code>## Warning: package &#39;bindrcpp&#39; was built under R version 3.4.4</code></pre>
 <pre><code>## Warning: Expected 4 pieces. Additional pieces discarded in 150 rows [247,
 ## 275, 276, 278, 279, 280, 286, 287, 288, 290, 303, 304, 305, 306, 307, 308,
 ## 309, 310, 311, 314, ...].</code></pre>
@@ -306,7 +296,7 @@ source(&quot;readin_data.R&quot;)</code></pre>
 <pre><code>## See spec(...) for full column specifications.</code></pre>
 <pre><code>## Warning in rbind(names(probs), probs_f): number of columns of result is not
 ## a multiple of vector length (arg 1)</code></pre>
-<pre><code>## Warning: 4293 parsing failures.
+<pre><code>## Warning: 4408 parsing failures.
 ## row # A tibble: 5 x 5 col     row col   expected   actual     file              expected   &lt;int&gt; &lt;chr&gt; &lt;chr&gt;      &lt;chr&gt;      &lt;chr&gt;             actual 1     1 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; file 2     2 &lt;NA&gt;  21 columns 20 columns &#39;MyEBirdData.csv&#39; row 3     3 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; col 4     4 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39; expected 5     5 &lt;NA&gt;  21 columns 18 columns &#39;MyEBirdData.csv&#39;
 ## ... ................. ... ..................................................... ........ ..................................................... ...... ..................................................... .... ..................................................... ... ..................................................... ... ..................................................... ........ .....................................................
 ## See problems(...) for more details.</code></pre>
