--- a/plotspage_Vermont.html
+++ b/plotspage_Vermont.html
@@ -229,27 +229,27 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Bonasa umbellus</td>
-<td align="left">Ruffed Grouse</td>
-<td align="left">2018-09-10</td>
+<td align="left">Melanerpes carolinus</td>
+<td align="left">Red-bellied Woodpecker</td>
+<td align="left">2018-10-27</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Bonasa</td>
-<td align="left">Ruffed Grouse</td>
-<td align="left">2018-09-10</td>
+<td align="left">Melanerpes</td>
+<td align="left">Red-bellied Woodpecker</td>
+<td align="left">2018-10-27</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Phasianidae (Pheasants, Grouse, and Allies)</td>
-<td align="left">Ruffed Grouse</td>
-<td align="left">2018-09-10</td>
+<td align="left">Sturnidae (Starlings)</td>
+<td align="left">European Starling</td>
+<td align="left">2018-10-23</td>
 <td align="left">Chittenden</td>
 <td align="left">VT</td>
 <td align="left">USA</td>
