--- a/plotspage_World.html
+++ b/plotspage_World.html
@@ -229,30 +229,30 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left">Species</td>
-<td align="left">Falco columbarius</td>
-<td align="left">Merlin</td>
-<td align="left">2018-09-09</td>
-<td align="left">Chittenden</td>
-<td align="left">VT</td>
-<td align="left">USA</td>
+<td align="left">Cinnyris jugularis</td>
+<td align="left">Olive-backed Sunbird</td>
+<td align="left">2018-11-10</td>
+<td align="left"></td>
+<td align="left">17</td>
+<td align="left">KHM</td>
 </tr>
 <tr class="even">
 <td align="left">Genus</td>
-<td align="left">Chlidonias</td>
-<td align="left">Black Tern</td>
-<td align="left">2018-09-02</td>
-<td align="left">Barnstable</td>
-<td align="left">MA</td>
-<td align="left">USA</td>
+<td align="left">Cyornis</td>
+<td align="left">Hainan Blue Flycatcher</td>
+<td align="left">2018-11-10</td>
+<td align="left"></td>
+<td align="left">17</td>
+<td align="left">KHM</td>
 </tr>
 <tr class="odd">
 <td align="left">Family</td>
-<td align="left">Monarchidae (Monarch Flycatchers)</td>
-<td align="left">Kauai Elepaio</td>
-<td align="left">2018-05-18</td>
-<td align="left">Kauai</td>
-<td align="left">HI</td>
-<td align="left">USA</td>
+<td align="left">Campephagidae (Cuckooshrikes)</td>
+<td align="left">Ashy Minivet</td>
+<td align="left">2018-11-10</td>
+<td align="left"></td>
+<td align="left">17</td>
+<td align="left">KHM</td>
 </tr>
 <tr class="even">
 <td align="left">Order</td>
